<resources>
    <string name="app_name">New EcommerceApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Welcome Guest</string>
    <string name="nav_header_subtitle">Login / Register</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="facebook_app_id">957191058545120</string>
    <string name="fb_login_protocol_scheme">fb957191058545120</string>
    <string name="home">Home</string>
    <string name="category">Category</string>
    <string name="todays_deal">Today\'s Deal</string>
    <string name="offers">Offers</string>
    <string name="compare">Compare</string>
    <string name="my_cart">My Cart</string>
    <string name="wish_list">WishList</string>
    <string name="my_orders">My Orders</string>
    <string name="profile">My Account</string>
    <string name="setting">Settings</string>
    <string name="login">Login</string>
    <string name="enter_pass">Enter Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="forget_password">Forget Password?</string>
    <string name="signup_msg">Don\'t have an account yet?</string>
    <string name="signup_txt">Sign up</string>
    <string name="welcome">Welcome Back</string>
    <string name="signin_msg">Sign in To Continue</string>
    <string name="register_txt1">New User Registration</string>
    <string name="register_txt2">Create account</string>
    <string name="register_txt3">Already have an account ?</string>
    <string name="signin_txt">Sign in</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_cpass">Enter Confirm Password</string>
    <string name="enter_mobile">Enter Mobile No.</string>
    <string name="register">Register</string>
    <string name="log_in_with">Sign in Using</string>
    <string name="enter_email_fpass">Enter Registered Email</string>
    <string name="send_mail">Send Email</string>
    <string name="fpass_txt">Enter your registered email id and we will send you a new password to login</string>
    <string name="back_to_login">Back To Login</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="return_policy">Return Policy</string>
    <string name="cancellation_policy">Cancellation Policy</string>
    <string name="payment">Payments</string>
    <string name="faq">FAQ</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="version">Version</string>
    <string name="profile_image">Profile Image</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="view_all">View all</string>
    <string name="my_address">My Addresses</string>
    <string name="saved_bank">Saved Bank Accounts</string>
    <string name="my_reviews"><![CDATA[My Reviews & Ratings]]></string>
    <string name="no_items">No Items</string>
    <string name="continue_shopping">Start Shopping</string>
    <string name="no_orders">No Orders</string>
    <string name="no_reviews">No Reviews</string>
    <string name="logout">Log Out</string>
    <string name="company">Company</string>
    <string name="website">Website</string>
    <string name="aboutus_web_url">http://www.ecommerce.com</string>
    <string name="email">Email</string>
    <string name="email_address">support@ecommerce.com</string>
    <string name="mob_num">+91 70169 74471</string>
    <string name="app_tagline">We Deliver Everything</string>
    <string name="about">About</string>
    <string name="contactus_title">Please enter your contact details and send your message, Admin will contact you soon.</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="subject">Subject</string>
    <string name="your_message">Your message</string>
    <string name="submit">Submit</string>
    <string name="empty_cart">Cart is Empty</string>
    <string name="empty_compare">No Comparisons</string>
    <string name="empty_wishlist">Empty Wishlist</string>
    <string name="empty_order">No Orders</string>
    <string name="my_bank_acc">My Bank Accounts</string>
    <string name="save">Save</string>
    <string name="change_password">Change Password</string>
    <string name="enter_old_pass">Enter Old Password</string>
    <string name="enter_new_pass">Enter New Password</string>
    <string name="confirm_new_pass">Confirm New Password</string>
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="add_address">Add Address</string>
    <string name="add_bank_acc">Add Bank Account</string>
    <string name="continue_btn">Continue</string>
    <string name="place_order">Place Order</string>
    <string name="enter_alt_mobile">Alternative Mobile No.(Optional)</string>
    <string name="houseName">House No, Building Name</string>
    <string name="roadName">"Road, Area, Colony "</string>
    <string name="select_country">Select Country</string>
    <string name="district">Enter District (Optional)</string>
    <string name="city">Enter City</string>
    <string name="pinCode">Enter Pincode/Zipcode</string>
    <string name="address_type">Select Address Type</string>
    <string name="radio_home_txt">Home (All day delivery)</string>
    <string name="radio_office_txt">Office (Delivery between 10 AM - 5 PM)</string>
    <string name="enter_bank_name">Enter Bank Name</string>
    <string name="enter_bank_account_no">Enter Bank A/c No.</string>
    <string name="bank_account_type">Account Type</string>
    <string name="enter_ifsc">Enter Bank IfSC</string>
    <string name="enter_bank_holder_name">Enter A/c Holder Name</string>
    <string name="enter_bank_holder_mobile">Enter A/c Holder Mobile Number</string>
    <string name="enter_bank_holder_email">Enter A/c Holder Email</string>
    <string name="set_bank_default">Set default for Refund Payment</string>
    <string name="latest_offers">Latest Offers</string>
    <string name="search_hint">Search here</string>
    <string name="brands">Brands</string>
    <string name="latest_products">Latest Products</string>
    <string name="price_details">Price Details</string>
    <string name="total">Total</string>
    <string name="delivery_charge">Delivery Charge</string>
    <string name="amount_payable">Amount Payable</string>
    <string name="order_summary">Order Summary</string>
    <string name="discount">Discount</string>
    <string name="apply_coupon_code">Apply coupon code</string>
    <string name="remove_coupon_code">Remove Coupon Code</string>
    <string name="available_payment_options">Available Payment Options</string>
    <string name="paypal">PayPal</string>
    <string name="stripe">Stripe</string>
    <string name="razorpay">Razorpay</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="subcategory">Subcategory</string>
    <string name="edit">Edit</string>
    <string name="change_or_add_address">Change or Add Address</string>
    <string name="remove">Remove</string>
    <string name="edit_address">Edit Address</string>
    <string name="select_address">Select Address</string>
    <string name="deliver_here">Deliver Here</string>
    <string name="coupons">Coupons</string>
    <string name="coupons_code">Coupon Code</string>
    <string name="max_discount_amount">Max Discount Amount</string>
    <string name="apply_coupon">Apply Coupon</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="lorem">color: xyz  size:3</string>
    <string name="filters">Filters</string>
    <string name="products">Products : </string>
    <string name="clear_filters">Clear Filters</string>
    <string name="sort_by">Sort By</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="price_range">Price Range</string>
    <string name="dash">-</string>
    <string name="search_brand">Select Brand</string>
    <string name="no_data">No Data</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="buy_now">Buy Now</string>
    <string name="product_details">Product Details</string>
    <string name="features">Features</string>
    <string name="related_product">Related Products</string>
    <string name="product_review">Product Reviews</string>
    <string name="more">See more</string>
    <string name="less">See less</string>
    <string name="abc">eewfjhe9wfgh98gfr t rg rfgregsgsgsergergsrdgsgg er nvdn nn nfo noi niofei nffnif oneo gegeriogi9erh ghrei9hr e9rhagrognhaiurghoiauergoagiekani oijg oijaijgaoijaoiejgeo ijawngw9ndegwignniiorgorgijriogjrohohorhorjhiojrhijhijhoroihioiorhihriiiiiorhoirhirhirhooooooojjjjjjjjjjeorgnorigrneoigtregtrneogrgoengoegnoen</string>
    <string name="colors">Colors : </string>
    <string name="size">Size :</string>
    <string name="add_to_compare">Add to compare</string>
    <string name="reviews">Reviews</string>
    <string name="rate_product">Rate Product</string>
    <string name="overall_rating">Overall Rating</string>
    <string name="bank_name">Bank Name :</string>
    <string name="bank_account_no">Bank A/c No. :</string>
    <string name="bank_holder_name">A/c holder name :</string>
    <string name="ifsc">Bank IFSC :</string>
    <string name="bank_holder_mobile">A/c holder mobile :</string>
    <string name="bank_holder_email">A/c holder email :</string>
    <string name="bank_account_type2">Account type :</string>
    <string name="edit_bank_account">Edit Bank Account</string>
    <string name="register_msg">Please verify your entered email to complete account registration</string>
    <string name="order_details">Order Details</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="payment_id">Payment ID</string>
    <string name="delivered">Delivered</string>
    <string name="other_item_in_this_order">Other Items in This Order</string>
    <string name="payment_details">Payment details</string>
    <string name="total_amount">Total Amount</string>
    <string name="selling_price">Selling Price</string>
    <string name="quantity">Quantity</string>
    <string name="total_price">Total Price</string>
    <string name="order_price_detail">Order Price Details</string>
    <string name="cancel_order_price">Cancel Order Price</string>
    <string name="order_refund_claim">Order Refund Claim</string>
    <string name="product_refund_claim">Product Refund Claim</string>
    <string name="cancel_this_order">Cancel this Order</string>
    <string name="cancel_this_product">Cancel this Product</string>
    <string name="download_invoice">Download invoice</string>
    <string name="refund_status">Refund Status</string>
    <string name="reason">Reason</string>
    <string name="order_cancelled">Order Cancelled</string>
    <string name="order_status">Order Status</string>
    <string name="packed">Packed</string>
    <string name="shipped">Shipped</string>
    <string name="delivery">Delivery</string>
    <string name="loading">Loading....</string>
    <string name="ok">OK</string>
    <string name="please_enter_email">Please enter Email</string>
    <string name="please_enter_password">Please Enter Password</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="please_enter_valid_email">Please Enter Valid Email</string>
    <string name="failed_try_again">Failed Try Again</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="landmark">Landmark (Optional)</string>
    <string name="state">State</string>
    <string name="search">Search</string>
    <string name="products_title">Products</string>
</resources>