<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/search_fragment"
        android:icon="@drawable/ic_search"
        android:title="@string/search" />
<!--    <item-->
<!--        android:id="@+id/nav_cat"-->
<!--        android:icon="@drawable/ic_baseline_category_24"-->
<!--        android:title="@string/category" />-->
    <item
        android:id="@+id/nav_wishlist"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/wish_list" />
    <item
        android:id="@+id/nav_compare"
        android:icon="@drawable/ic_baseline_compare_arrows_24"
        android:title="@string/compare" />

    <item
        android:id="@+id/nav_cart"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/my_cart"/>

</menu>